--- a/views/users/profile.handlebars
+++ b/views/users/profile.handlebars
@@ -5,24 +5,45 @@
   <div class="col-md-8 mb-5">
     <h1>{{user.name}}</h1>
     <p>{{user.email}}</p>
+    <p>
+      <b>{{user.Comments.length}} </b>已評論餐廳<br>
+      <b>{{user.Comments.length}} </b>收藏的餐廳<br>
+      <b>{{user.Comments.length}} </b>followings（追蹤者）<br>
+      <b>{{user.Comments.length}} </b>followers（追隨者）
+    </p>
     <a href="/users/{{user.id}}/edit" class="btn btn-primary mt-3">Edit</a>
   </div>
   <hr>
-  <div class="mt-3">
-    <h3>已發表 {{user.Comments.length}} 則評論</h3>
-    <div class="row row-cols-1 row-cols-md-6 g-4 mt-1">
-      {{#each user.Comments}}
-      <div class="col">
-        <div class="card">
-          <a href="/restaurants/{{this.Restaurant.id}}">
-            <img src="{{this.Restaurant.image}}" class="card-img-top">
-          </a>
-          <div class="card-body">
-            <p class="card-title">{{this.Restaurant.name}}</p>
-          </div>
-        </div>
+  <div class="followship col-md-4 d-flex flex-column">
+    <div class="card">
+      <h5 class="card-header"><b>{{user.Comments.length}} </b>followings（追蹤者）</h5>
+      <div class="card-body card-group">
       </div>
+    </div>
+    <div class="card">
+      <h5 class="card-header"><b>{{user.Comments.length}} </b>followers（追隨者）</h5>
+      <div class="card-body">
+      </div>
+    </div>
+  </div>
+  <div class="followship col-md-8 d-flex flex-column">
+    <div class="card">
+      <h5 class="card-header"><b>{{user.Comments.length}} </b>已評論餐廳</h5>
+      <div class="card-body card-group">
+      {{#each user.Comments}}
+        <a href="/restaurants/{{this.Restaurant.id}}" class="p-1">
+          <img src="{{this.Restaurant.image}}" class="img-fluid"
+            width='80'
+            height='80'
+            class='avatar'>
+        </a>
       {{/each}}
+      </div>
+    </div>
+    <div class="card">
+      <h5 class="card-header"><b>{{user.Comments.length}} </b>收藏的餐廳</h5>
+      <div class="card-body">
+      </div>
     </div>
   </div>
 </div>
